# live-wgsl

./: .gitignore  Cargo.toml  README.md  fragment.wgsl
.github/workflows/: release.yml
src/: fragment_default.wgsl  gpu.rs  main.rs  poll_new_fragment_code.rs  window.rs
src/gpu/: gpu_state.rs  renderer.rs  vertex_pass_through.wgsl
